--- a/dev/frontend/dashboard.html
+++ b/dev/frontend/dashboard.html
@@ -180,7 +180,7 @@
          <input type="text" placeholder="Search">
        </li>
        <li class="action b-left-lightgray text-center">
-         <a href="#" class="icon-wrap">
+         <a ng-click='logout()' class="icon-wrap" >
             <img class="icon" src="assets/img/icons/signout.svg" alt="icon" />
             <span class="thin">Sign Out</span>
          </a>
