--- a/dev/frontend/index.html
+++ b/dev/frontend/index.html
@@ -7,7 +7,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/app.css">
-  <title ng-bind="'Merger | ' + title">Merger</title>
+  <title ng-bind="'Merger' + title">Merger</title>
   
 	<!--<base href="/"> -->
 </head>
@@ -26,6 +26,7 @@
 <script src="assets/js/vendor/loading-bar.js"></script>
 <script src="assets/js/vendor/ui-bootstrap-tpls-2.2.0.min.js"></script>
 <script src="assets/js/vendor/truncate.js"></script>
+<script src="assets/js/services/authService.js"></script>
 <!--<script src="assets/js/services/uploadService.js"></script>
 <script src="assets/js/services/downloadService.js"></script>
 <script src="assets/js/services/displayService.js"></script>-->
