--- a/dev/frontend/login.html
+++ b/dev/frontend/login.html
@@ -25,45 +25,40 @@
         <div class="col-sm-3">
           <div class="form-wrapper">
             <br><br>
-            
             <uib-tabset active="activeForm">
               <uib-tab index="0" heading="Sign In">
                 <br>
-                <form>
+                <div ng-show="error" class="alert alert-danger">{{errorMessage}}</div>
+                <form ng-submit="login()">
                   <div>
                     <div class="form-group">
-                      <input class="form-control input-blue" type="text" name="username" placeholder="Username" />
+                      <input class="form-control input-blue" type="text" name="email" placeholder="Email" ng-model="loginForm.email" required/>
                     </div>
                     <br />
                     <div class="form-group">
-                      <input class="form-control input-blue" type="password"  name="password" placeholder="Password" />
+                      <input class="form-control input-blue" type="password"  name="password" placeholder="Password"  ng-model="loginForm.password" required/>
                     </div>
-                    <br />
-                    <span>
-                      <input type="checkbox" name="rem_me"/>
-                      <span>Remember me</span>
-                    </span>
                     <br /><br />
                     <div>
-                      <button class="btn btn-blue">Sign In</button>
+                      <button class="btn btn-blue" type="submit" ng-disabled="disabled">Sign In</button>
                     </div>
                   </div>
                 </form>
               </uib-tab>
               <uib-tab index="1" heading="Sign Up">
                 <br>
-                <form>
+                <form ng-submit="register()">
                   <div>
                     <div class="form-group">
-                      <input class="form-control input-blue" type="text" name="username" placeholder="Username" />
+                      <input class="form-control input-blue" type="text" name="email" placeholder="Email"  ng-model="registerForm.email" required/>
                     </div>
                     <br />
                     <div class="form-group">
-                      <input class="form-control input-blue" type="password"  name="password" placeholder="Password" />
+                      <input class="form-control input-blue" type="password"  name="password" placeholder="Password"  ng-model="registerForm.password" required/>
                     </div>
                     <br /><br />
                     <div>
-                      <button class="btn btn-blue">Sign Up</button>
+                      <button class="btn btn-blue" type="submit" ng-disabled="disabled">Sign Up</button>
                     </div>
                   </div>
                 </form>
