--- a/dev/merger/static/login.html
+++ b/dev/merger/static/login.html
@@ -4,7 +4,7 @@
         <div class="col-sm-9 no-pad">
           <div class="img-container">
             <h3>
-              <img class="logo" src="assets/img/icons/logo.svg" alt="merger" />
+              <img class="logo" src="static/assets/img/icons/logo.svg" alt="merger" />
               <span class="thin">Merger</span>
             </h3>
             <br><br>
