--- a/dev/merger/static/index.html
+++ b/dev/merger/static/index.html
@@ -27,9 +27,14 @@
     <script src="static/assets/js/vendor/angular-route.min.js" type="text/javascript"></script>
     <script src="static/assets/js/vendor/loading-bar.js" type="text/javascript"></script>
     <script src="static/assets/js/vendor/truncate.js" type="text/javascript"></script>
+
+    <script src="static/assets/js/vendor/ng-file-upload-shim.min.js" type="text/javascript"></script>
+    <script src="static/assets/js/vendor/ng-file-upload.min.js" type="text/javascript"></script>
+
     <script src="static/assets/js/vendor/ui-bootstrap-tpls-2.2.0.min.js" type="text/javascript"></script>
     <script src="static/assets/js/controllers/app.js" type="text/javascript"></script>
     <script src="static/assets/js/services/authService.js" type="text/javascript"></script>
+    <script src="static/assets/js/services/fileService.js" type="text/javascript"></script>
     <script src="static/assets/js/controllers/loginController.js" type="text/javascript"></script>
     <script src="static/assets/js/controllers/homeController.js" type="text/javascript"></script>
     
