--- a/dev/merger/static/dashboard.html
+++ b/dev/merger/static/dashboard.html
@@ -290,7 +290,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="uploadModal">
-            <p class="pull-right close" ng-click="$close()">&times;</p>
+            <p class="pull-right close" data-dismiss="modal" aria-label="Close">&times;</p>
             <h3 class="thin blue text-center">Upload File(s)</h3>
             <hr>
             <span class="progress" ng-show="progress >= 0">
